--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
-     <!-- Modal -->
+    <!-- Modal products -->
+
     <!-- <div class="backdrop is-hidden" data-modal> -->
       <div class="modal-products conteiner">
         <!-- Button close -->
@@ -133,12 +134,48 @@
         </form>
       </div>
     </div>
-
-    <!-- <script src="./js/modal.js"></script> -->
-
+    <!-- Ready -->
   </body>
 </html>
 <!--Readi quest-->
+
+<section class="products-section" id="products">
+  <div class="products conteiner">
+    <p class="products__undertitle">100% natural</p>
+    <h2 class="products__title">Products</h2>
+    <ul class="products__list">
+      <!-- Ice cream cards -->
+      <li class="products__item">
+        <h3 class="products__subtitle">Ice cream</h3>
+        <p class="products__discription">
+          Soft ice cream with a delicate taste. Made with milk, cream, sugar and
+          natural stabilizer
+        </p>
+        <button class="product__btn" type="button"></button>
+      </li>
+
+      <!-- Ice coffee cards -->
+      <li class="products__item">
+        <h3 class="products__subtitle">Ice coffee</h3>
+        <p class="products__discription">
+          Fragrant invigorating drink created from 100% natural ingredients
+          without the use of preservatives and flavor enhancers
+        </p>
+        <button class="product__btn" type="button"></button>
+      </li>
+
+      <!-- Milkshakes cards -->
+      <li class="products__item">
+        <h3 class="products__subtitle">Milkshakes</h3>
+        <p class="products__discription">
+          Sweet drinks based on milk and ice cream, supplemented with syrups,
+          fruits, berries and other sweets of your choice
+        </p>
+        <button class="product__btn" type="button"></button>
+      </li>
+    </ul>
+  </div>
+</section>
 
 
 
